# UseCaseCoverage

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  install.sh
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: build-cli.yml  ci.yml  release.yml  verify-installers.yml
UseCaseCoverageCLI/: .gitignore  Cargo.toml
UseCaseCoverageCLI/.ucc/reports/2026-05-12_22-52-12/: index.html
UseCaseCoverageCLI/.ucc/reports/2026-05-13_08-32-49/: app.ts  index.html  styles.css
UseCaseCoverageCLI/.ucc/reports/2026-05-13_18-25-18/: app.js
UseCaseCoverageCLI/.ucc/reports/2026-05-13_18-35-53/: data.json
UseCaseCoverageCLI/src/: main.rs
UseCaseCoverageCore/: Cargo.toml
UseCaseCoverageCore/proptest-regressions/usecases/: mod.txt
UseCaseCoverageCore/src/: lib.rs
UseCaseCoverageCore/src/domain/: mod.rs
UseCaseCoverageCore/src/infrastructure/: mod.rs
UseCaseCoverageCore/src/ports/: mod.rs
UseCaseCoverageCore/src/usecases/: mod.rs
UseCaseCoverageCore/tests/: e2e_test.rs
UseCaseCoverageCore/tests/snapshots/: e2e_test__covered_with_gap_reason_scenario.snap  e2e_test__multiple_artifacts_scenario.snap  e2e_test__multiple_features_scenario.snap  e2e_test__multiple_features_scenario.snap.new  e2e_test__multiple_nested_features_scenario.snap  e2e_test__multiple_nested_features_scenario.snap.new  e2e_test__multiple_use_cases_and_bugs_scenario.snap  e2e_test__multiple_use_cases_scenario.snap  e2e_test__nested_features_scenario.snap  e2e_test__nested_features_scenario.snap.new  e2e_test__only_bugs_scenario.snap  e2e_test__simple_e2e_scenario.snap  e2e_test__simple_e2e_scenario.snap.new
UseCaseCoverageReporter/: Cargo.toml
UseCaseCoverageReporter/src/: lib.rs
e2e/covered_with_gap_reason/: feature.ucc  useCaseCoverage.test.ts
e2e/multiple_artifacts/: feature.ucc  test.kt  test.rs  test.swift  test.ts
e2e/multiple_features/: feature1.ucc  feature2.ucc
e2e/multiple_nested_features/analytics/export/: feature_029.ucc  feature_034.ucc  feature_049.ucc  feature_082.ucc  feature_090.ucc
e2e/multiple_nested_features/analytics/reports/: feature_010.ucc  feature_012.ucc  feature_030.ucc  feature_032.ucc  feature_040.ucc  feature_045.ucc  feature_056.ucc  feature_083.ucc  feature_087.ucc  feature_088.ucc
e2e/multiple_nested_features/api/v1/: feature_016.ucc  feature_018.ucc  feature_053.ucc  feature_060.ucc  feature_072.ucc  feature_073.ucc  feature_075.ucc  feature_079.ucc  feature_085.ucc  feature_098.ucc
e2e/multiple_nested_features/api/v2/: feature_006.ucc  feature_033.ucc  feature_076.ucc
e2e/multiple_nested_features/core/auth/: feature_002.ucc  feature_008.ucc  feature_039.ucc  feature_044.ucc
e2e/multiple_nested_features/core/settings/: feature_003.ucc  feature_005.ucc  feature_011.ucc  feature_023.ucc  feature_057.ucc  feature_061.ucc  feature_065.ucc  feature_081.ucc
e2e/multiple_nested_features/core/users/: feature_028.ucc  feature_031.ucc  feature_054.ucc  feature_055.ucc  feature_063.ucc  feature_099.ucc  feature_100.ucc
e2e/multiple_nested_features/infrastructure/cache/: feature_024.ucc  feature_046.ucc  feature_048.ucc  feature_097.ucc
e2e/multiple_nested_features/infrastructure/db/: feature_004.ucc  feature_017.ucc  feature_020.ucc  feature_026.ucc  feature_038.ucc  feature_064.ucc  feature_084.ucc  feature_091.ucc
e2e/multiple_nested_features/infrastructure/queue/: feature_014.ucc  feature_043.ucc  feature_058.ucc  feature_059.ucc  feature_062.ucc  feature_080.ucc  feature_093.ucc
e2e/multiple_nested_features/integrations/slack/: feature_021.ucc  feature_066.ucc  feature_086.ucc  feature_096.ucc
e2e/multiple_nested_features/integrations/stripe/: feature_007.ucc  feature_022.ucc  feature_050.ucc  feature_069.ucc  feature_078.ucc  (+2 more)
e2e/multiple_nested_features_with_coverage/: UseCaseCoverageTests.swift  today_feature.ucc  useCaseCoverage.test.ts
e2e/multiple_use_cases/: feature.ucc
e2e/multiple_use_cases_and_bugs/: feature.ucc
e2e/nested_features/core/: feature_a.ucc
e2e/only_bugs/: feature.ucc
e2e/simple/: simple_feature.ucc
(+124 files in other folders)
