[package]
name = "use_case_coverage_cli"
version = "0.1.0"
repository = "https://github.com/pedrovgs/UseCaseCoverage"
description = "Command line interface for Use Case Coverage tool https://github.com/pedrovgs/UseCaseCoverage"
homepage = "https://github.com/pedrovgs/UseCaseCoverage"
keywords = ["testing", "coverage", "cli", "automation", "quality"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
chrono = "0.4.44"
use_case_coverage_core = { path = "../UseCaseCoverageCore" }
use_case_coverage_reporter = { path = "../UseCaseCoverageReporter" }

[dev-dependencies]
tempfile = "3.13"
regex = "1.10"

[[bin]]
name = "ucc"
path = "src/main.rs"
[package.metadata.deb]
maintainer = "pedrovgs"
copyright = "2026, pedrovgs"
license-file = ["../LICENSE", "0"]
extended-description = """
Command line interface for Use Case Coverage tool.
Bridges the gap between feature specifications and test implementations.
"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/ucc", "/usr/bin/ucc", "755"],
]
