[package]
name = "use_case_coverage_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
aho-corasick = "1.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
proptest.workspace = true
tempfile = "3.13"
