[package]
name = "use_case_coverage_core"
version = "0.4.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
aho-corasick = "1.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
proptest.workspace = true
tempfile = "3.13"
