[package]
name = "use_case_coverage_reporter"
version = "0.4.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.44", features = ["clock"] }
serde_json = "1.0"
use_case_coverage_core = { path = "../UseCaseCoverageCore" }

[dev-dependencies]
tempfile = "3.13"
